munin (work)

  * SNMP plugin "df" properly strips the label and serial number from
    Windows drive labels.
  * SNMP plugins now honour the "host" environment variable if they can't
    deduce the hostname from $0.
  * Small interface improvements in the HTML output.
  * Changes of min and max values now causes corresponding changes in 
    the RRD files.
  * Use @@PERL@@ in all perl shebang lines.
  * Added new option "graph_sums" which creates summarised graphs.
  * Added new SNMP plugins for sensors, reading info from System-Informant on
    Windows boxes.
  * Munin-update adapts to field type changes (loss-free conversion from
    COUNTER->DERIVE et al.)
  * Added new config option "local_address", to specify which local address
    outgoing connections (from munin-update) should be used.
  * New wildcard plugin generic/ping_ to graph ping times.
  * Added "comparison" views, to view a whole hostgroup at once.
  * Bugfix in munin-limits.

munin (1.1.4)

  * Better error handling when fetching data from RRD files.
  * Fixed bug in munin-graph when choosing colours (Deb#267185).
  * Added plugin linux/df_abs
  * Sanitise incoming fieldnames a bit better.
  * Small layout improvements.
  * Added new options "graph_height" and "graph_width", to beter control size.
  * Added support for SNMP probing.
  * SNMP plugin "if" now accepts PPP interfaces as well as ethernet
    interfaces.
  * SNMP plugin "df" now understands Windows SNMP daemon.
  
munin (1.1.3)

  * Applied patch from Jacques Caruso to make HTML output standards
    compliant.
  * Munin-graph: fixed bug when combining graph_order aliases with
    "normal" fields, as reported by Jacques Caruso.
  * Plugin bugfixes from Jacques Caruso, in linux/iostat_ios and
    generic/ipacng.
  * Munin-nagios: Only state number of OKs when something is in warning or
    critical state.
  * Munin-graph: Added 'graph_sources' option. This is (in effect) the same as
    graph_order, but with a default of 'graph no'.